[package]
name = "rupicola"
version = "0.2.0"
authors = ["Marcin Kocot <mkocot@k.pl>>"]


[dependencies]
getopts = "^0.2"
rustc-serialize = "^0.3"
log = "^0.3"
yaml-rust = "^0.3"
libc = "^0.2"
pwhash = "^0.1"
syslog = "^3.0"
quire = "*"
hyper-rustls = "^0.3"

[dev-dependencies]
clippy = "*"

[dependencies.jsonrpc]
git = "https://github.com/mkocot/jsonrpc"

[dependencies.hyper]
version = "^0.10"
default-features = false

[dependencies.hyperlocal]
# Hyperlocal by default download openssl
# This branch disables downloading openssl (not required for library)
version = "^0"
git = "https://github.com/mkocot/hyperlocal"
branch = "disable_default_features_on_hyper"
# This will disable all default features (and openssl from hyper)
default-features = false

[features]
with_rustls = []
default = ["with_rustls"]
nightly = []

[profile.release]
#lto = true
panic = "abort"
